<resources>
    <string name="app_name">TypeAware</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">Home</string>
    <string name="title_charts">Charts</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="con_title">Consent to Participate</string>
    <string name="con_intro">Welcome to TypeAware! This app is part of a scientific study, which focuses on tracking users\' smartphone typing behaviour during the day. During the first week, the app will send you a notification every day to complete a brief questionnaire about how you have experienced your own typing behaviour, after which you can take a look at the data collected by the app. On the second week of the study you will always be shown an overview of the data that the app has collected and you will also be asked to answer a daily questionnaire. If you do not receive a notification or a daily questionnaire within 24hours after installation, please let us know.</string>
    <string name="con_contact">"This study is conducted by Katri Säily and Aku Visuri at the University of Oulu. In case you have questions, please contact us at katri.saily@oulu.fi"</string>
    <string name="con_data">By pressing accept, you allow TypeAware to anonymously collect app and keyboard usage as well as sleep data. All data will be securely stored on a server in compliance with European data protection laws (BGBl. I S. 2325). All the keyboard data will be encrypted before sending it to the server so nobody can see exactly what you have written. Your data will only be used in the context of our research and will never be shared with third parties. You can withdraw from the study at any moment by simply uninstalling the app. Thanks! And have fun with learning more about your typing behaviour!</string>
    <string name="con_btn_give_consent">Accept</string>
    <string name="con_btn_not_now">Not Now</string>
    <string name="con_could_not_register">No connection to our servers - are you connected to the Internet?</string>
    <string name="con_not_now_prompt">If you wish to participate in the study, please click accept.</string>
    <string name="title_activity_consent">ConsentActivity</string>
    <string name="user_info_title">Welcome to the study!</string>
    <string name="user_info_intro">We still need to collect some basic information from you</string>
    <string name="user_full_name">Full name:</string>
    <string name="user_email">Email</string>
    <string name="save_user_info_consent">After saving your info you will be redirected to the onboarding pages. If you wish to change your info after pressing save, you will need to reinstall the app.</string>
    <string name="save_user_info">Save</string>
    <string name="consent_prompt">In order to continue using the app, make sure that battery optimization is NOT enabled and that you have given consent to collect your data.</string>
    <string name="email_prompt">Your email will only be used to contact you if problems occur.</string>
    <string name="skip_prompt">Are you sure you don\'t want to finish the onboarding?\nIf you click skip, you will move straight to Home screen without onboarding.</string>
    <string name="skip">Skip</string>
    <string name="skip_title">Skip onboarding</string>
    <string name="finish">Finish</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sharedpref_accessibility">accessibility_permission</string>
    <string name="sharedpref_battery">battery_opt_off</string>
    <string name="sharedpref_permissions">permissions_granted</string>
    <string name="sharedpref_questionnaire_ans">isQuestionnaireAnswered</string>
    <string name="sharedpref_questionnaire_day">questionnaire_first_day</string>
    <string name="sharedpref_user_info">user_info_saved</string>
    <string name="sharedpref_consent">consent_given</string>
    <string name="sharedpref_onboarding">onboarding_done</string>
    <string name="sharedpref_authorization">authorization_code</string>
    <string name="sharedpref_state">state</string>
    <string name="sharedpref_first_login">first_login_done</string>
    <string name="sharedpref_access">access_token</string>
    <string name="sharedpref_refresh">refresh_token</string>
    <string name="sharedpref_userid">userId</string>
    <string name="sharedpref_firstweek_done">first_week_done</string>
    <string name="sharedpref_firstweek_end_date">first_week_end_date</string>
    <string name="sharedpref_secondweek_start_date">second_week_start_date</string>
    <string name="sharedpref_secondweek_end_date">second_week_end_date</string>
    <string name="sharedpref_secondweek_done">second_week_done</string>
    <string name="questionnaire_title_daily">Daily questionnaire</string>
    <string name="questionnaire_title_end">End questionnaire</string>
    <string name="questionnaire_explanation_yes">If yes, please explain here</string>
    <string name="questionnaire_explanation_open">Write your answer here</string>
    <string name="submit_btn">Submit</string>
    <string name="continue_btn">Continue</string>
    <string name="click_to_answer">Click here to answer today\'s questionnaire</string>
    <string name="notifications_header">Notifications</string>
    <string name="pref_header">Preference settings</string>
    <string name="permissions_header">Permissions</string>
    <string name="limit_mobile_data_usage">Limit mobile data usage</string>
    <string name="network_prefs">Specify network preferences for data updates</string>
    <string name="show_sleep_data">Show sleep data</string>
    <string name="notifications_enabled">Allow this app to send notifications</string>
    <string name="battery_optimization_options">Battery optimization is DISABLED</string>
    <string name="accessibility_perm_snackbar_title">Accessibility permission</string>
    <string name="accessibility_perm_snackbar_msg">Click ok to enable accessibility in settings.</string>
    <string name="accessibility_perm_enabled">Accessibility permission is enabled</string>
    <string name="accessibility_perm_disabled">Accessibility permission is disabled</string>
    <string name="keyboard_data_to_show">Choose typing metrics to show on graph</string>
    <string name="battery_opt_on_prompt">Battery optimization is enabled</string>
    <string name="battery_opt_off_prompt">Battery optimization is disabled</string>
    <string name="mobile_data_usage_off_prompt">It is not recommended to limit mobile data usage</string>
    <string name="accessibility_permission_change">Accessibility permission should be enabled for the app to run as intended. Click here and enable accessibility_service.</string>
    <string name="click_here_to_make_changes">Click here to make changes.</string>
    <string name="battery_opt_snackbar_title">Battery optimization</string>
    <string name="battery_opt_snackbar_msg">Click ok to disable battery optimization in settings.</string>
    <string name="contact_info">In case of issues, please contact: \nkatri.saily@oulu.fi</string>
    <string name="help">Help</string>
    <string name="click_to_answer_final_questionnaire">Click to answer final questionnaire</string>
    <string name="notifications_header_key">notifications_header</string>
    <string name="keyboard_data_key">keyboard_data_selections</string>
    <string name="mobile_data_key">limit_mobile_data_usage</string>
    <string name="access_permission_key">accessibility_permission_boolean</string>
    <string name="battery_opt_key">battery_optimization</string>
    <string name="sleep_data_key">show_sleep_data</string>
    <string name="network_pref_key">network_prefs</string>
    <string name="notifications_key">notifications_enabled</string>
    <string name="contact">contact</string>
    <string name="accessibility_permission_required">Accessibility permission is required for the app to function properly.</string>
    <string name="accessibility_permission_granted">Accessibility permission is granted. The app can track your typing speed now.</string>
    <string name="battery_optimization_prompt">Battery optimization should be disabled.</string>
    <string name="all_permissions_granted">All necessary permissions are granted. Click OK to continue.</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="to_view_your_sleep_data_you_need_to_log_in_to_your_fitbit_account">To view your sleep data, you need to log in to your Fitbit account.</string>
    <string name="fitbit_login">Fitbit Login</string>
    <string name="sleep_data_title">Last night\'s sleep</string>
    <string name="speed_avg">Average speed</string>
    <string name="accuracy">Accuracy</string>
    <string name="home_sleep_data_hidden_title">Sleep data is hidden</string>
    <string name="home_sleep_data_hidden_content">If you wish to see your sleep data, go to settings and enable \'Show sleep data\'.</string>
    <string name="home_sleep_data_not_found_title">Sleep data could not be found</string>
    <string name="home_sleep_data_not_found_content">Sleep data could not be found for this date, please try another date.</string>
    <string name="home_keyboard_data_not_found_title">Data could not be found for this date</string>
    <string name="home_keyboard_data_not_found_wait_for_update">If you have just started using the app, \n please wait 15-20 minutes \n for the data to update.</string>
    <string name="home_keyboard_data_not_found_content">Please make sure that accessibility settings are turned on. You can go to settings by pressing the button below.</string>
    <string name="home_keyboard_data_not_found_btn">Settings</string>
    <string name="home_keyboard_wpm_stats_faster_than_avg">You were faster than \n users on average!</string>
    <string name="home_keyboard_wpm_stats_slower_than_avg">You were slower than \n users on average.</string>
    <string name="likert_1_1">1 (significantly less)</string>
    <string name="likert_1_2">2 (less)</string>
    <string name="likert_1_3">3 (slightly less)</string>
    <string name="likert_1_4">4 (not more or less)</string>
    <string name="likert_1_5">5 (slightly more)</string>
    <string name="likert_1_6">6 (more)</string>
    <string name="likert_1_7">7 (significantly more)</string>
    <string name="likert_2_1">1 (strongly disagree)</string>
    <string name="likert_1">1 (strongly disagree)</string>
    <string name="likert_2">2 (disagree)</string>
    <string name="likert_3">3 (somewhat disagree)</string>
    <string name="likert_4">4 (neither agree or disagree)</string>
    <string name="likert_5">5 (somewhat agree)</string>
    <string name="likert_6">6 (agree)</string>
    <string name="likert_7">7 (strongly agree)</string>
</resources>