<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Daily questionnaire"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_black"
            android:textColor="@color/muted_purple"
            android:padding="8dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/questionTextView"
            android:fontFamily="@font/roboto_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="8dp"
            android:text="Q1: Yesterday I had to correct my typing more than normally."
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup1"
            android:paddingVertical="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/likertScale1"
                android:text="@string/likert_1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/likertScale2"
                android:text="@string/likert_2"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/likertScale3"
                android:text="@string/likert_3"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/likertScale4"
                android:text="@string/likert_4"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/likertScale5"
                android:text="@string/likert_5"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likert_6"
                android:id="@+id/likertScale6"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/likertScale7"
                android:text="@string/likert_7"/>
        </RadioGroup>


        <EditText
            android:id="@+id/amountOfWordsAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/roundstyle"
            android:ems="10"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:hint="Amount of words (number)"
            android:inputType="number"
            android:minHeight="48dp"
            android:layout_marginVertical="10dp"
            />

        <NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:visibility="gone"/>


        <Button
            android:id="@+id/submitButton"
            style="@style/btn"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:text="Submit" />

    </LinearLayout>

</RelativeLayout>