<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@color/white"
    tools:context="ui.onboarding.ConsentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5sp"
            android:layout_gravity="top|center">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAlignment="center"
                android:background="@color/light_purple"
                android:textColor="@color/white"
                android:text="@string/con_title"
                android:textStyle="bold"
                android:textSize="20sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="5sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/dark_purple"
                android:text="@string/con_intro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="80sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/con_portrait"
                        android:paddingTop="5sp"
                        android:scaleType="centerInside"
                        android:src="@drawable/sleep_screen" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="80sp"
                        android:layout_weight="1"
                        android:contentDescription="@string/con_portrait"
                        android:paddingTop="5sp"
                        android:scaleType="centerInside"
                        android:src="@drawable/wake_up_40" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:padding="5sp"
                android:textColor="@color/light_purple"
                android:text="@string/con_contact" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:padding="5sp"
                android:textColor="@color/dark_purple"
                android:text="@string/con_data" />
            <!-- Who we are -->



            <!--<TextView-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:autoLink="email"-->
            <!--android:padding="5sp"-->
            <!--android:text="@string/con_contact" />-->

        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/conBtnQuit"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/muted_light_purple"
            android:textColor="@color/dark_grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:elevation="10dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/con_btn_not_now"
            android:textSize="12sp" />

        <Button
            android:id="@+id/conBtnGiveConsent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:padding="5dp"
            android:elevation="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/dark_purple"
            android:text="@string/con_btn_give_consent"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>