<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".ui.onboarding.UserInfoFragment"
    android:background="@color/dark_purple">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_title"
        android:layout_gravity="center"
        android:padding="30dp"
        android:textSize="24sp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info_intro"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:textSize="22sp"
        android:textColor="@color/white"/>


    <EditText
        android:id="@+id/userFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Full name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="8dp" />

    <EditText
        android:id="@+id/participantId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Your participant id"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_user_info_consent"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="20dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/saveUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/save_user_info"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:background="@drawable/roundstyle"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_purple"
        android:paddingHorizontal="20dp"
        android:layout_marginVertical="20dp"/>
</LinearLayout>